--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -32,25 +32,9 @@
         margin: 0!important;
     }
 
-    .kroschke-prime-etikette {
-        display: inline-block;
-        background: url(/ServicesMvc/images/kroschke-prime-etikette.png);
-        width: 350px;
-        height: 64px;
-        vertical-align:top;
-    }
-    .kroschke-prime-etikette-more {
-        margin: 19px 0 0 15px;
-        vertical-align:top;
-        width: 40px;
-    }
-
-    .kennzeichen-etikette-image {
-        display: inline-block;
-        margin: 0 0 0 10px;
-        width: 150px;
-        height: 64px;
-        background: url(/ServicesMvc/_Themes/AH2015/images/kennzeichen-etikette.png) 0 0 no-repeat;
+    
+    .prime-control {
+        margin-top: -15px !important;
     }
 
     .kroschke-prime-etikette-form {
