--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -37,8 +37,7 @@
 
     .zulassungsdaten {
         float: left;
-        width: 48%;
-        margin-left: 0;
+        margin: 0!important;
     }
 
     .zulassungsdaten-required-fields-summary {
