--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -37,6 +37,13 @@
         margin-top: -15px !important;
     }
 
+    .kennzeichen-etikette-image {
+        display: inline-block;
+        margin: 0 0 0 10px;
+        width: 150px;
+        height: 64px;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kennzeichen-etikette.png) 0 0 no-repeat;
+    }
     .kroschke-prime-etikette-form {
         background: url(/ServicesMvc/images/kroschke-prime-etikette-bg.png);
         margin: 5px 0 20px 15px;
