UI-Optimierung (responsive)

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Coc/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Coc/Partial/FormKopf.cshtml
@@ -11,6 +11,18 @@
         padding: 10px !important;
     }
     
+    @@media (max-width: 1580px) {
+        .row-fluid .span4 {
+           display: block;
+            float: none;
+            width: 100%;
+            margin-left: 0;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+    }
+    
 </style>
 
 <div id="divFormKopf">
