--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/GridForConfirmation.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Carporterfassung/GridForConfirmation.cshtml
@@ -3,8 +3,8 @@
 
 @{ var gridName = "GridCarporterfassungForConfirmation"; }
 
-@(Html.Telerik()
-    .Grid<CarporterfassungModel>()
+@(Html.XTelerik()
+    .XGrid<CarporterfassungModel>()
     .Name(gridName)
     .XAjaxDataBinding("CarporterfassungAjaxBindingForConfirmation", "Fahrzeuge")
     .Columns(columns =>
