General localization architecture work

--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1409,6 +1409,9 @@ div.span-alert-placeholder .alert {
 .grayed {
     opacity: 0.4!important;
 }
+.control-group-raw {
+    display: inline-block;
+}
 
 .report-generator-buttons, .report-generator-wrapper {
     display: inline-block;
