Enabling wysiwyg localization for our inline FormControls

--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1412,6 +1412,9 @@ div.span-alert-placeholder .alert {
 .control-group-raw {
     display: inline-block;
 }
+.wysiwyg-localization-icon {
+    cursor: pointer;    
+}
 
 .report-generator-buttons, .report-generator-wrapper {
     display: inline-block;
