--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -944,4 +944,8 @@ li.dashboard-dropdown-menu i {
     background-color: #d37166;
 }
 
+.SummaryItem {
+    border-radius: 4px !important;
+}
+
 </style>
