--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
@@ -2,7 +2,8 @@
 
 <style>
 
-    .dd-handle {
+    .dd-handle  {
+        height: auto;
         cursor: auto !important;
     }
 
@@ -13,6 +14,10 @@
     .zipool-item-copy {
         background-color: #cddf9a; /* fallback color for older browsers */
         background-color: rgba(160, 197, 57, 0.5);
+    }
+    
+    .zipool-item-error {
+        background-color: #f2dede;
     }
     
 </style>
