--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -715,6 +715,26 @@
         });
     };
 
+    function ResizeSummaryContainers() {
+        setTimeout(function () {
+            $('.SummaryItems').closest('.portlet.box').css('height', 'auto');
+            if ($('#ZiPoolInfo').length)
+                $('#ZiPoolInfo').closest('.portlet.box').css('height', 'auto');
+        }, 200);
+
+        var newHeight = 0;
+
+        setTimeout(function () {
+            if ($('#ZiPoolInfo').length) {
+                newHeight = Math.max($('.SummaryItems').closest('.span8').height(), $('#ZiPoolInfo').closest('.portlet.box').height());
+                $('#ZiPoolInfo').closest('.portlet.box').css('height', newHeight);
+            } else {
+                newHeight = Math.max($('.SummaryItems').closest('.span12').height(), 140);
+            }
+            $('.SummaryItems').closest('.portlet.box').css('height', newHeight);
+        }, 200);
+    }
+
 </script>
 
 <div id="InnerAdressen" class="white-popup mfp-hide">
