--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
@@ -1,30 +1,51 @@
 ﻿@using CkgDomainLogic.Fahrzeugbestand.Models
-@model GeneralSummary
+@model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel
 
-@{
-    var isMassenzulassung = (bool)TempData["IsMassenzulassung"];
-    var isMassenabmeldung = (bool) TempData["IsMassenabmeldung"];
-    var isSchnellabmeldung = (bool) TempData["IsSchnellabmeldung"];
-}
-
-<h4>@Model.Header</h4>
+<h4>@Model.ZulassungSummary.Header</h4>
 
 @Html.SpanAlert("WaitHint")
 
-<div class="SummaryItems">
-    @foreach (var item in Model.Items)
+<div class="form-horizontal">
+
+    <div class="row-fluid">
+
+        <div class="@(Model.ModusAbmeldung || Model.ModusSonderzulassung ? "span12" : "span8")">
+            
+            @using (Html.PortletBox("", "icon-table", isCollapsible: false))
+            {
+                <div class="SummaryItems">
+                    @foreach (var item in Model.ZulassungSummary.Items)
+                    {
+                        <div class="SummaryItem @item.Tag">
+                            <h5 class="SummaryItemTitle">@item.TitleAsHtml</h5>
+
+                            <div class="SummaryItemBody">
+                                @item.BodyAsHtml
+                            </div>
+                        </div>
+                    }
+                </div>
+            }
+
+        </div>
+
+    @if (!Model.ModusAbmeldung && !Model.ModusSonderzulassung)
     {
-        <div class="SummaryItem @item.Tag">
-            <h5 class="SummaryItemTitle">@item.TitleAsHtml</h5>
-    
-            <div class="SummaryItemBody">
-                @item.BodyAsHtml
-            </div>
+        <div class="span4">
+
+            @using (Html.PortletBox(Localize.RequiredDocumentsForRegistration, "icon-file", isCollapsible: false))
+            {
+                @Html.Partial("Partial/ZiPoolInfoListe", Model.ZiPoolDetails)
+            }
+
         </div>
     }
+
+    </div>
+
 </div>
 
-@if (isMassenzulassung)
+@if (Model.Zulassung.Zulassungsdaten.IsMassenzulassung)
 {
 <div id="divPortletFahrzeugauswahl">
     @using (@Html.PortletBox(Localize.Vehicles, "icon-table", "light-grey", false))
@@ -35,18 +56,18 @@
               .Name(gridName)
               .XAjaxDataBinding("FahrzeugAuswahlSelectedAjaxBinding", "Zulassung")
               .Columns(columns =>
-                  {
-                      columns.XBound(c => c.FinID).Visible(false);
-                      columns.XBound(c => c.FIN);
-                      columns.XBound(c => c.FahrzeugArt);
-                      columns.XBound(c => c.HandelsName);
-                      columns.XBound(c => c.WunschKennz1);
-                      columns.XBound(c => c.WunschKennz2);
-                      columns.XBound(c => c.WunschKennz3);
-                      columns.XBound(c => c.ReservationNr);
-                      columns.XBound(c => c.ReservationName);
-                      columns.XBound(c => c.Evb);
-                  })
+              {
+                  columns.XBound(c => c.FinID).Visible(false);
+                  columns.XBound(c => c.FIN);
+                  columns.XBound(c => c.FahrzeugArt);
+                  columns.XBound(c => c.HandelsName);
+                  columns.XBound(c => c.WunschKennz1);
+                  columns.XBound(c => c.WunschKennz2);
+                  columns.XBound(c => c.WunschKennz3);
+                  columns.XBound(c => c.ReservationNr);
+                  columns.XBound(c => c.ReservationName);
+                  columns.XBound(c => c.Evb);
+              })
               .XAutoColumnConfiguration()
               .XPageSize(10)
               .XSort(sortOrder => sortOrder.Add(c => c.FinID).Ascending())
@@ -54,7 +75,7 @@
     }
 </div>
 }
-else if (isMassenabmeldung)
+else if (Model.Zulassung.Zulassungsdaten.IsMassenabmeldung)
 {
 <div id="divPortletFahrzeugauswahl">
     @using (@Html.PortletBox(Localize.Vehicles, "icon-table", "light-grey", false))
@@ -65,13 +86,13 @@ else if (isMassenabmeldung)
               .Name(gridName)
               .XAjaxDataBinding("FahrzeugAuswahlSelectedAjaxBinding", "Zulassung")
               .Columns(columns =>
-                  {
-                      columns.XBound(c => c.FinID).Visible(false);
-                      columns.XBound(c => c.FIN);
-                      columns.XBound(c => c.FahrzeugArt);
-                      columns.XBound(c => c.HandelsName);
-                      columns.XBound(c => c.Kennzeichen);
-                  })
+              {
+                  columns.XBound(c => c.FinID).Visible(false);
+                  columns.XBound(c => c.FIN);
+                  columns.XBound(c => c.FahrzeugArt);
+                  columns.XBound(c => c.HandelsName);
+                  columns.XBound(c => c.Kennzeichen);
+              })
               .XAutoColumnConfiguration()
               .XPageSize(10)
               .XSort(sortOrder => sortOrder.Add(c => c.FinID).Ascending())
@@ -79,7 +100,7 @@ else if (isMassenabmeldung)
     }
 </div>
 }
-else if (isSchnellabmeldung)
+else if (Model.Zulassung.Zulassungsdaten.IsSchnellabmeldung)
 {
 <div id="divPortletFahrzeugauswahl">
     @using (@Html.PortletBox(Localize.Vehicles, "icon-table", "light-grey", false))
@@ -108,5 +129,12 @@ else if (isSchnellabmeldung)
 }
 
 <script type="text/javascript">
+
     FormWizardShowHideSaveButton(true);
+    setTimeout(function () { ResizeSummaryContainers(); }, 200);
+
+    $(window).on('resize', function () {
+        ResizeSummaryContainers();
+    });
+
 </script>
