--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/SummaryAuslieferAdressenLink.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/SummaryAuslieferAdressenLink.cshtml
@@ -1,5 +1,14 @@
-﻿
-<a href="#" onclick="return AjaxFormAuslieferAdressenEdit()" class="btn white mini"><i class="icon-pencil"></i> @Localize.Edit</a>
+﻿<style>
+    
+    .box.portlet a.btn {
+        color: #ffffff;
+    }
+    
+</style>
+
+<div>
+    <a href="#" onclick="return AjaxFormAuslieferAdressenEdit()" class="btn bg-color-ckg-orange">@Localize.DifferentDeliveryAddress</a>
+</div>
 
 <div class="SummaryAddressHint">
     @Html.SpanAlert("AuslieferAdressenMessage", "mini")
