graphics design logos, "Kroschke prime express delivery" + "Kroschke eVB check"

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -46,6 +46,29 @@
         width: 100%;
     }
 
+
+
+    .zulassungsdaten .prime-control {
+        margin: 20px 0 40px 70px !important;
+    }
+
+    span.expressversand {
+        display: inline-block;
+        margin: 0 0 0 10px;
+        width: 100px;
+        height: 64px;
+        background: url(/ServicesMvc/_Themes/AH2015/images/express-versand.png) 0 0 no-repeat;
+        padding: 0 0 0 0;
+    }
+
+    .kroschke-evb {
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 0 0 no-repeat;
+        display: inline-block;
+        margin: 0 0 0 10px;
+        width: 65px;
+        height: 65px;
+    }
+
 </style>
 
 <script type="text/javascript">
