--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -61,12 +61,30 @@
         padding: 0 0 0 0;
     }
 
+    /*.kroschke-evb-control-group-border {
+        border: 1px solid #e6e6e6;
+        padding: 10px;
+        border-radius: 10px!important;
+        margin-bottom: 10px;
+    }
+    .kroschke-evb-control-group-border .control-group {
+        margin-bottom: 0 !important;
+    }*/
+    .kroschke-evb-control-group {
+        margin-bottom: 0!important;
+    }
+    .kroschke-evb-control-group .control-label {
+        padding-top: 18px;
+    }
+    .kroschke-evb-control-group .controls {
+        padding-top: 14px;
+    }
     .kroschke-evb {
-        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 0 0 no-repeat;
-        display: inline-block;
-        margin: 0 0 0 10px;
-        width: 65px;
+        background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 55px 0px no-repeat;
         height: 65px;
+    }
+    #evb-info {
+        margin: -10px 10px 10px 40px;
     }
 
 </style>
@@ -138,7 +156,17 @@
         });  
         
         InitEvbVersInfo("EvbNr", "EvbInfo"); // Anzeige der Versichererdaten gem. EVB
+
+        EvbTest();
     });
+
+    function EvbTest() {
+        var group = $("#EvbNr").closest(".control-group");
+        var label = group.find(".control-label");
+
+        group.addClass("kroschke-evb-control-group");
+        label.addClass("kroschke-evb");
+    }
 
     function UpdateAnzahlAbmeldungen() {
         var anzAbm = $("#AnzahlAbmeldungen").val();
