--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/ZulassungsdatenForm.cshtml
@@ -28,7 +28,6 @@
         margin-top: 5px !important;
         margin-bottom: 0 !important;
         line-height: 20px;
-        width: 360px;
     }
     
     .m-wrap.tiny {
@@ -49,7 +48,8 @@
 
 
     .zulassungsdaten .prime-control {
-        margin: 20px 0 40px 70px !important;
+        margin: 20px 0 0 60px !important;
+        padding-bottom: 15px!important;
     }
 
     span.expressversand {
@@ -61,30 +61,32 @@
         padding: 0 0 0 0;
     }
 
-    /*.kroschke-evb-control-group-border {
-        border: 1px solid #e6e6e6;
+    .kroschke-evb-control-group-border {
+        border: 1px solid #e0e0e0;
+        border-radius: 12px!important;
         padding: 10px;
-        border-radius: 10px!important;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
     .kroschke-evb-control-group-border .control-group {
         margin-bottom: 0 !important;
-    }*/
+    }
     .kroschke-evb-control-group {
         margin-bottom: 0!important;
     }
     .kroschke-evb-control-group .control-label {
-        padding-top: 18px;
+        padding-top: 24px;
     }
     .kroschke-evb-control-group .controls {
-        padding-top: 14px;
+        padding-top: 20px;
     }
     .kroschke-evb {
         background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-evb.png) 55px 0px no-repeat;
-        height: 65px;
+        height: 53px;
     }
     #evb-info {
-        margin: -10px 10px 10px 40px;
+        margin: 0 !important;
+        border: 0 !important;
+        border-radius: 10px !important;
     }
 
 </style>
@@ -155,7 +157,7 @@
             SetZulassungskreis(zulassungskreis);
         });  
         
-        InitEvbVersInfo("EvbNr", "EvbInfo"); // Anzeige der Versichererdaten gem. EVB
+        InitEvbVersInfo("EvbNr", "evb-info"); // Anzeige der Versichererdaten gem. EVB
 
         EvbTest();
     });
