Überarbeitung Infocenter, neue Variante für generelle Dokumente für alle Kunden

--- a/inetpub/wwwroot/ServicesMvc/Views/Document/CreateDocument.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/CreateDocument.cshtml
@@ -1,12 +1,24 @@
-﻿@using CkgDomainLogic.General.Models.DataModels
-@model DocumentErstellenBearbeiten
+﻿@model CkgDomainLogic.DomainCommon.Models.DokumentErstellenBearbeiten
 
-<div id="divDocumentProperties">
-    @Html.FormDropDownListFor(m => m.DocTypeID, Model.AvailableDocumentTypes, new { @class = "m-wrap" })
+<div id="divDocumentProperties" class="form-horizontal">
 
-    @Html.FormMultiSelectListFor(m => m.SelectedWebGroups, Model.AvailableWebGroups.ToSelectList("Value", "Text"), new { @class = "m-wrap chosen" })
+    @Html.FormValidationSummary()
+
+
+    @Html.FormDropDownListFor(m => m.DocTypeID, Model.AvailableDocumentTypes.ToSelectList("DocumentTypeID", "DocTypeName"), new {@class = "m-wrap"})
+
+@if (Model.GeneralMode)
+{
+    @Html.HiddenFor(m => m.SelectedWebGroups)
+}
+else
+{
+    @Html.FormMultiSelectListFor(m => m.SelectedWebGroups, Model.AvailableWebGroups.ToSelectList("GroupID", "GroupName"), new { @class = "m-wrap chosen" })
+}
+
 
     @Html.FormRequiredFieldsSummary()
+
 </div>
 
 <div class="space20"></div>
@@ -16,9 +28,10 @@
 </div>
 
 <script type="text/javascript">
+    
     function SetDocumentProperties() {
         // Gruppenzuordnung muss gesetzt sein, damit Upload fortgesetzt werden kann
-        if ($("#SelectedWebGroups").val() == null) {
+        if ($("#SelectedWebGroups").val() == null && !@Model.GeneralMode) {
             return false;
         }
         
@@ -33,4 +46,5 @@
         
         return true;
     }
+
 </script>
