--- a/inetpub/wwwroot/ServicesMvc/Views/Document/Upload.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/Upload.cshtml
@@ -1,5 +1,4 @@
-﻿@using CkgDomainLogic.General.Models.DataModels
-@model DocumentErstellenBearbeiten
+﻿@model CkgDomainLogic.DomainCommon.Models.DokumentErstellenBearbeiten
 
 @Html.FormLabel(Localize.DocumentUploadDocumentMulti, "SummaryItemTitle float-left margin-right-10 margin-top-10")
 
