--- a/inetpub/wwwroot/ServicesMvc/Views/Document/DocumentTypeIndex.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/DocumentTypeIndex.cshtml
@@ -1,7 +1,4 @@
-﻿@using CkgDomainLogic.DomainCommon.ViewModels
-@model DokumentViewModel
-
-<div id="closeDocumentTypeDetails" onclick="CloseDocumentTypeDetails();" class="icon-close"></div>
+﻿@model CkgDomainLogic.DomainCommon.ViewModels.DocumentViewModel
 
 <div id="divDocumentTypeGrid">
     @Html.Partial("DocumentTypeGrid")
@@ -37,19 +34,8 @@
         FilteredData_Grid_OnColumnReorder($(this));
     }
 
-    function CreatedocumentType() {
-        var url = "CreateDocumentType/";
-        $.ajax({
-            type: "GET",
-            url: url,
-            loadingShow: true,
-            success: function (result) {
-                ShowDocumentTypeDetails(result);
-            },
-            error: function (result) {
-                alert(result.data);
-            }
-        });
+    function CreateDocumentType() {
+        EditDocumentType(-1);
     }
 
     function DeleteDocumentType(id) {
@@ -86,7 +72,7 @@
 
     function EditDocumentType(id) {
 
-        var url = "EditDocumentType/" + id;
+        var url = "CreateOrEditDocumentType/" + id;
         $.ajax({
             type: "GET",
             url: url,
@@ -100,15 +86,10 @@
         });
     }
 
-    function ShowDocumentTypeDetails(result, showCloseButton) {
+    function ShowDocumentTypeDetails(result) {
         $("#divDocumentTypeDetails").html(result);
         $("#divDocumentTypeGrid").slideUp();
         $("#divDocumentTypeDetails").slideDown();
-
-        if (showCloseButton == null) showCloseButton = true;
-        if (showCloseButton) {
-            $("#closeDocumentTypeDetails").show();
-        }
 
         FormPreparePrivateAjax();
     }
@@ -126,7 +107,6 @@
     }
 
     function CloseDocumentTypeDetailsInner() {
-        $("#closeDocumentTypeDetails").hide();
         $("#divDocumentTypeDetails").slideUp(function () {
             $("#divDocumentTypeGrid").delay(200).show();
             window.scrollTo(0, 0);
