--- a/inetpub/wwwroot/ServicesMvc/Views/Document/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Document/Index.cshtml
@@ -1,14 +1,13 @@
-﻿@using CkgDomainLogic.DomainCommon.ViewModels
-@model DokumentViewModel
+﻿@model CkgDomainLogic.DomainCommon.ViewModels.DocumentViewModel
 
 <h3 class="page-title" id="headerTitle">Infocenter 
-    @if (Model.IsAdministrator)
+    @if (Model.AdminMode)
     {
         <small>Admin</small>
     }
 </h3>
 
-@if (Model.IsAdministrator)
+@if (Model.AdminMode)
 {
     <div class="tabbable tabbable-custom margin-top-15">
         <ul class="nav nav-tabs">
