kroschke prime color issues

--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1516,7 +1516,7 @@ div.span-alert-placeholder .alert {
     border: 1px solid #e0e0e0 !important;
     border-radius: 10px !important;
     box-shadow: 5px 5px 20px -1px rgba(0,0,0,0.25)!important;
-    background-color: #FAEFEF;
+    background-color: #FBF6EC;
     line-height: 20px;
     white-space: normal;
 }
